Split dataset into 3 type, train, val, and test

--- a/Utils/notebook_preprocessing.ipynb
+++ b/Utils/notebook_preprocessing.ipynb
@@ -553,6 +553,316 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Split Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_df, valid_df = train_test_split(final_label, test_size=0.4, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>filename</th>\n",
+       "      <th>format</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>labels</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2179</td>\n",
+       "      <td>2179</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3561</td>\n",
+       "      <td>3561</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>6134</td>\n",
+       "      <td>6134</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>825</td>\n",
+       "      <td>825</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        filename  format\n",
+       "labels                  \n",
+       "0           2179    2179\n",
+       "1           3561    3561\n",
+       "2           6134    6134\n",
+       "3            825     825"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_df.groupby('labels').count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>filename</th>\n",
+       "      <th>format</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>labels</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1437</td>\n",
+       "      <td>1437</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2451</td>\n",
+       "      <td>2451</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4058</td>\n",
+       "      <td>4058</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>520</td>\n",
+       "      <td>520</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        filename  format\n",
+       "labels                  \n",
+       "0           1437    1437\n",
+       "1           2451    2451\n",
+       "2           4058    4058\n",
+       "3            520     520"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "valid_df.groupby('labels').count()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Split Validation into Valid and Benchmark.\n",
+    "\n",
+    "Benchmark Dataset will contains 100 images for each classes to meets balanced data distribution."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "valid_df.labels[0]==0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "covid_df = valid_df[valid_df['labels'] == 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lung_opc_df = valid_df[valid_df['labels'] == 1]\n",
+    "normal_df = valid_df[valid_df['labels']==2]\n",
+    "v_pneumonia_df = valid_df[valid_df['labels']==3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "benchmark_df = pd.concat((lung_opc_df.head(50), lung_opc_df.tail(50),\n",
+    "                    ))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Int64Index([8816, 6667, 8380, 5277, 7019, 5282, 9527, 5995, 6817, 9117, 4574,\n",
+       "            8937, 4059, 9006, 9054, 8034, 4197, 4980, 5970, 4639, 9315, 8799,\n",
+       "            5165, 4774, 5023, 8193, 9366, 5508, 6165, 8891, 6788, 7479, 4525,\n",
+       "            5059, 4767, 4252, 4037, 4489, 5198, 5853, 5514, 7434, 4932, 6832,\n",
+       "            7753, 6698, 8573, 7356, 5940, 5557, 8254, 4096, 6459, 7711, 7276,\n",
+       "            9070, 7463, 4422, 9084, 9058, 5030, 3905, 7720, 7092, 4553, 5346,\n",
+       "            5361, 4427, 4429, 3774, 5291, 4221, 3973, 5860, 9585, 8135, 4948,\n",
+       "            5125, 5717, 7562, 9567, 4098, 7501, 8153, 8204, 3678, 5681, 7962,\n",
+       "            7854, 8108, 4592, 7161, 7897, 6260, 8142, 4589, 4130, 6827, 6321,\n",
+       "            6055],\n",
+       "           dtype='int64')"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "benchmark_df.index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2451"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(lung_opc_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_lung_opc_df = lung_opc_df.drop(index=benchmark_df.index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2351"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(new_lung_opc_df)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
